--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>homework-1</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <h1>Effective Solution for Your Business</h1>
+    </header>
     <main></main>
     <footer></footer>
 </body>
