--- a/index.html
+++ b/index.html
@@ -7,9 +7,23 @@
 </head>
 <body>
     <header>
-        <h1>Effective Solution for Your Business</h1>
+        <!- Navigation Contact -->
+        <nav>
+            <ul>
+                <li> <a href="">Web Studio</a></li>
+                <li>Studio</li>
+                <li>Portfolio</li>
+                <li>Contacts</li>
+            </ul>
+        </nav>
+        <address>
+            <a href="tel.+110001111111">+11 (000) 111-11-11</a>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </address>
     </header>
-    <main></main>
+    <main>
+        <h1>Effective Solution for Your Business</h1>
+    </main>
     <footer></footer>
 </body>
 </html>
