--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
     <main>
         <h1>Effective Solution for Your Business</h1>
     </main>
-    <footer></footer>
+    <footer>
+        <a href="">Web Studio</a>
+        <p>
+            Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+        </p>
+    </footer>
 </body>
 </html>
