--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <!-Navigation Contact-->
+        <!-- Navigation Contact -->
         <nav>
             <ul>
                 <li> <a href="">Web Studio</a></li>
@@ -49,23 +49,22 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="/images/img-1.jpg" alt="Mark Guerrero" width: 264px; height: 260px;>
-                    
+                    <img src="/images/img-1.jpg" alt="Mark Guerrero" width="264" />
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="/images/img-2.jpg" alt="Tom Ford" width: 264px; height: 260px;>
+                    <img src="/images/img-2.jpg" alt="Tom Ford" width="264" />
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="/images/img-3.jpg" alt="Camila Garcia" width: 264px; height: 260px;>
+                    <img src="/images/img-3.jpg" alt="Camila Garcia" width="264" />
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="/images/img-4.jpg" alt="Daniel Wilson" width: 264px; height: 260px;>
+                    <img src="/images/img-4.jpg" alt="Daniel Wilson" width: 264px>
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
