--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="/images/img-4.jpg" alt="Daniel Wilson" width: 264px>
+                    <img src="/images/img-4.jpg" alt="Daniel Wilson" width="264">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
