--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <header>
         <!-- Navigation Contact -->
         <nav>
+            <a href="./index.html">Web Studio</a>
             <ul>
-                <li> <a href="">Web Studio</a></li>
                 <li>Studio</li>
                 <li>Portfolio</li>
                 <li>Contacts</li>
@@ -18,8 +18,8 @@
         </nav>
         <address>
             <ul>
-                <li> <a href="tel.+110001111111">+11 (000) 111-11-11</a></li>
                 <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li> <a href="tel.+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
