--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
         <!-- Navigation Contact -->
         <nav>
-            <a href="./index.html">Web Studio</a>
+            <a href="Web Studio"></a>
             <ul>
                 <li>Studio</li>
                 <li>Portfolio</li>
@@ -19,7 +19,7 @@
         <address>
             <ul>
                 <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li> <a href="tel.+110001111111">+11 (000) 111-11-11</a></li>
+                <li> <a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
