--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
         <!-- Navigation Contact -->
         <nav>
-            <a href="Web Studio"></a>
+            <a href="./index.html">Web Studio</a>
             <ul>
                 <li>Studio</li>
                 <li>Portfolio</li>
