--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
             <a href="./index.html">WebStudio</a>
             <ul>
-                <li>Studio</li>
+                <li> <a href="">Studio</a></li>
                 <li>Portfolio</li>
                 <li>Contacts</li>
             </ul>
