--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             <a href="./index.html">WebStudio</a>
             <ul>
                 <li> <a href="">Studio</a></li>
-                <li>Portfolio</li>
-                <li>Contacts</li>
+                <li> <a href="">Portfolio</a></li>
+                <li> <a href="">Contacts</a></li>
             </ul>
         </nav>
         <address>
