--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
         </address>
     </header>
     <main>
-        <h1>Effective Solution for Your Business</h1>
+        <br>
+        <h1>Effective Solution for Your Business</h1><br/>
         <button type="submit">Order Service</button>
+        </section>
         <section>
             <ul>
                 <li>
