--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </address>
     </header>
     <main>
-        <br>
+        <section>
         <h1>Effective Solution for Your Business</h1><br/>
         <button type="submit">Order Service</button>
         </section>
