--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     </header>
     <main>
         <section>
-        <h1>Effective Solution for Your Business</h1><br/>
-        <button type="submit">Order Service</button>
+        <h1>Effective Solutions for Your Business</h1><br/>
+        <button type="button">Order Service</button>
         </section>
         <section>
             <ul>
