--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </ul>
         </section>
         <section>
-            <h2>Our Team</h2>
+            <h2>Our Team</h2> <br/>
             <ul>
                 <li>
                     <img src="./images/img-1.jpg" alt="Mark Guerrero" width="264" />
