--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
     <main>
         <section>
-        <h1>Effective Solutions for Your Business</h1> <br/>
+        <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
         </section>
         <section>
@@ -50,7 +50,7 @@
             </ul>
         </section>
         <section>
-            <h2>Our Team</h2> <br/>
+            <h2>Our Team</h2>
             <ul>
                 <li>
                     <img src="./images/img-1.jpg" alt="Mark Guerrero" width="264" />
